--- a/Assets/SmartLocalizationWorkspace/Data/LanguageData/Language.resx
+++ b/Assets/SmartLocalizationWorkspace/Data/LanguageData/Language.resx
@@ -131,12 +131,6 @@
 	<data name="G2_1Cut2" xml:space="preserve">
 		<value>Guard 2 Dialog Cutscene #2</value>
 	</data>
-	<data name="Hold_1" xml:space="preserve">
-		<value>Hold tutorial</value>
-	</data>
-	<data name="Hold_1_Title" xml:space="preserve">
-		<value>Hold tutorial Title</value>
-	</data>
 	<data name="Interaction_1" xml:space="preserve">
 		<value>Interaction tutorial</value>
 	</data>
@@ -353,10 +347,10 @@
 	<data name="Special_Interaction_1_Title" xml:space="preserve">
 		<value>Special Interaction tutorial Title</value>
 	</data>
-	<data name="Throw_1" xml:space="preserve">
-		<value>Throw tutorial</value>
+	<data name="ThrowAndHold_1" xml:space="preserve">
+		<value>Throw and Hold tutorial</value>
 	</data>
-	<data name="Throw_1_Title" xml:space="preserve">
-		<value>Throw tutorial Title</value>
+	<data name="ThrowAndHold_1_Title" xml:space="preserve">
+		<value>Throw and Hold tutorial Title</value>
 	</data>
 </root>
