--- a/Assets/SmartLocalizationWorkspace/Data/LanguageData/Language.en.resx
+++ b/Assets/SmartLocalizationWorkspace/Data/LanguageData/Language.en.resx
@@ -131,20 +131,8 @@
 	<data name="G2_1Cut2" xml:space="preserve">
 		<value />
 	</data>
-	<data name="Hold_1" xml:space="preserve">
-		<value>It is possible to take an object with the [E] key. 
-Once the object is recovered, it appears in your HUD.
-You can attack with this object with the [SPACE] key.
-</value>
-	</data>
-	<data name="Hold_1_Title" xml:space="preserve">
-		<value>Hold</value>
-	</data>
 	<data name="Interaction_1" xml:space="preserve">
-		<value>You can interact with multiple interaction elements. 
-Like NPCs and objects. 
-For that press [E] when you are near for a target with which you can interact.
-</value>
+		<value>You can interact with the haloed elements using the [E] key</value>
 	</data>
 	<data name="Interaction_1_Title" xml:space="preserve">
 		<value>Interaction</value>
@@ -416,23 +404,17 @@ PS: Do not forget that the key to the experimental room is in the central lab.
 		<value />
 	</data>
 	<data name="Special_Interaction_1" xml:space="preserve">
-		<value>Some objects may interact with multiple objects in the environment.
-To do this, press [space] when you are near for an environment with which an object you own can interact..
-For example you can use a screwdriver on a ventilation grid.
-</value>
+		<value>You can use the object you are carrying by pressing the [SPACE] key</value>
 	</data>
 	<data name="Special_Interaction_1_Title" xml:space="preserve">
-		<value>Special Interaction</value>
+		<value>Object usage</value>
 	</data>
-	<data name="Throw_1" xml:space="preserve">
-		<value>Once the object is recovered.
-You can then launch this object by pressing the [Shift] key at your convenience to dose the throw.
-When you squeeze Shift briefly, the object falls to your feet.
-The [E] key cancels the throw.
-
-</value>
+	<data name="ThrowAndHold_1" xml:space="preserve">
+		<value>"When you retrieve an object, it appears at the bottom right of your screen.
+You can launch an item you are carrying by pressing [SHIFT].
+The longer you hold the key plus the throw will go far."</value>
 	</data>
-	<data name="Throw_1_Title" xml:space="preserve">
-		<value>Throw Tutorial</value>
+	<data name="ThrowAndHold_1_Title" xml:space="preserve">
+		<value>Throwing objects</value>
 	</data>
 </root>
