--- a/Assets/SmartLocalizationWorkspace/Data/LanguageData/Language.en.resx
+++ b/Assets/SmartLocalizationWorkspace/Data/LanguageData/Language.en.resx
@@ -259,7 +259,22 @@ Number 12: February 18th 2pm
 		<value>List of medical visit times</value>
 	</data>
 	<data name="NG1_2_1" xml:space="preserve">
-		<value />
+		<value>Number 4: Woke up at 10am today
+Stayed 1 hour looking at the camera
+Completely crazy
+
+Notes: Watch carefully
+
+Number 12: Did not have breakfast
+Finished reading ""A Quest For Quest""
+Very discretly
+
+Notes: irrelevant requires less attention
+
+Number 3: Looked ...
+
+(There is nothing write after ...)
+</value>
 	</data>
 	<data name="NG1_2_1_Title" xml:space="preserve">
 		<value>Observation report of the living room</value>
@@ -275,25 +290,10 @@ Poor young people ...
 	</data>
 	<data name="NG1_4_1" xml:space="preserve">
 		<value>Number 1 looks healthy we have not tested a number for a long time.This new generation is normally much more enduring we are very proud of it and we really hope that it will reach all the hopes that we have in them
-I really hope that number 1 and a 2 will pass their tests I really hope so ...
-</value>
+I really hope that number 1 and a 2 will pass their tests I really hope so ...</value>
 	</data>
 	<data name="NG1_4_1_Title " xml:space="preserve">
-		<value>Here is the list of medical appointments for this month
-Do not forget to be fasting for medical examinations
-
-Number 1: no visit
-Number 2: no visit
-Number 3: February 2th 8:30am
-Number 4: February 4th 10:30am
-Number 5: February 5th 3:30pm
-Number 6: February 7th 11:30am
-Number 7: February 12th 10am
-Number 8: February 14th 11:45am
-Number 9: February 13th 4:45pm
-Number 10: February 15th 5:30pm
-Number 11: February 17th 6:20pm
-Number 12: February 18th 2pm</value>
+		<value>Report of number 1 medical tests</value>
 	</data>
 	<data name="NG1_4_2" xml:space="preserve">
 		<value>Hello Mr. VILLALBA I make you go back a recurring problem that we noticed since the surveillance room of the zone of life 08M the numbers begin to have a kind of ... fascination for the door of entry and exit of their zone They see it as a kind of divinity. Other watch rooms notice this kind of problem you should pay attention it could quickly become uncontrollable ...</value>
