--- a/Assets/SmartLocalizationWorkspace/Data/LanguageData/Language.en.resx
+++ b/Assets/SmartLocalizationWorkspace/Data/LanguageData/Language.en.resx
@@ -132,7 +132,7 @@
 		<value>Everybody is here ?</value>
 	</data>
 	<data name="Interaction_1" xml:space="preserve">
-		<value>You can interact with the highlighted elements using the [E] key</value>
+		<value>You can interact with the highlighted elements using the &lt;color=#ff0000ff&gt;[E]&lt;/color&gt; key</value>
 	</data>
 	<data name="Interaction_1_Title" xml:space="preserve">
 		<value>Interaction</value>
@@ -402,14 +402,14 @@ PS: Do not forget that the key to the experimental room is in the central lab.
 		<value />
 	</data>
 	<data name="Special_Interaction_1" xml:space="preserve">
-		<value>You can use the object you are carrying by pressing the [SPACE] key</value>
+		<value>You can use the object you are carrying by pressing the &lt;color=#ff0000ff&gt;[SPACE]&lt;/color&gt; key</value>
 	</data>
 	<data name="Special_Interaction_1_Title" xml:space="preserve">
 		<value>Object usage</value>
 	</data>
 	<data name="ThrowAndHold_1" xml:space="preserve">
 		<value>When you retrieve an object, it appears at the bottom right of your screen.
-You can launch an item you are carrying by pressing [SHIFT].
+You can launch an item you are carrying by pressing &lt;color=#ff0000ff&gt;[SHIFT]&lt;color&gt;.
 The longer you hold the key plus the throw will go far.</value>
 	</data>
 	<data name="ThrowAndHold_1_Title" xml:space="preserve">
