--- a/Assets/SmartLocalizationWorkspace/Data/LanguageData/Language.fr.resx
+++ b/Assets/SmartLocalizationWorkspace/Data/LanguageData/Language.fr.resx
@@ -132,7 +132,7 @@
 		<value>Tout le monde est là ?</value>
 	</data>
 	<data name="Interaction_1" xml:space="preserve">
-		<value>Vous pouvez interragir avec les éléments entourés d'un halo avec la touche &lt;color=#ff0000ff&gt;[E]&lt;/color&gt;</value>
+		<value>Vous pouvez interagir avec les éléments entourés d'un halo avec la touche &lt;color=#ff0000ff&gt;[E]&lt;/color&gt;</value>
 	</data>
 	<data name="Interaction_1_Title" xml:space="preserve">
 		<value>Interaction</value>
@@ -417,11 +417,11 @@ PS : N’oublie pas que la carte d'accès de la salle d'expérience est dans le 
 		<value>Utiliser un objet</value>
 	</data>
 	<data name="ThrowAndHold_1" xml:space="preserve">
-		<value>Quand vous récupererez un objet, il apparait en bas à droite de votre écran.
+		<value>Quand vous récupérez un objet, il apparait en bas à droite de votre écran.
 Vous pouvez lancer un objet que vous portez en appuyant sur &lt;color=#ff0000ff&gt;[SHIFT]&lt;/color&gt;.
 Plus vous maintenez la touche plus le lancer ira loin.</value>
 	</data>
 	<data name="ThrowAndHold_1_Title" xml:space="preserve">
-		<value>Porter et lancer un objet</value>
+		<value>&lt;size=23&gt;Porter et lancer un objet&lt;/size&gt;  </value>
 	</data>
 </root>
