--- a/Assets/SmartLocalizationWorkspace/Data/LanguageData/Language.resx
+++ b/Assets/SmartLocalizationWorkspace/Data/LanguageData/Language.resx
@@ -344,6 +344,9 @@
 	<data name="S3_1P6Cut4" xml:space="preserve">
 		<value>Scientist 3 Dialog Cutscene #4</value>
 	</data>
+	<data name="Screwdriver" xml:space="preserve">
+		<value>Screwdriver</value>
+	</data>
 	<data name="Special_Interaction_1" xml:space="preserve">
 		<value>Special Interaction tutorial</value>
 	</data>
@@ -356,7 +359,46 @@
 	<data name="ThrowAndHold_1_Title" xml:space="preserve">
 		<value>Throw and Hold tutorial Title</value>
 	</data>
-	<data name="Screwdriver" xml:space="preserve">
-		<value>Screwdriver</value>
+	<data name="Apple_Title" xml:space="preserve">
+		<value>Apple Object Title</value>
+	</data>
+	<data name="Apple_1" xml:space="preserve">
+		<value>Apple Object</value>
+	</data>
+	<data name="Box_Title" xml:space="preserve">
+		<value>Box Object Title</value>
+	</data>
+	<data name="Box_1" xml:space="preserve">
+		<value>Box Object</value>
+	</data>
+	<data name="Laser_Title" xml:space="preserve">
+		<value>Laser Object Title</value>
+	</data>
+	<data name="Laser_1" xml:space="preserve">
+		<value>Laser Object</value>
+	</data>
+	<data name="Spawner_Title" xml:space="preserve">
+		<value>Spawner Object Title</value>
+	</data>
+	<data name="Spawner_1" xml:space="preserve">
+		<value>Spawner Object</value>
+	</data>
+	<data name="Pressureplate_Title" xml:space="preserve">
+		<value>Pressure Plate Title</value>
+	</data>
+	<data name="Pressureplate_1" xml:space="preserve">
+		<value>Pressure Plate</value>
+	</data>
+	<data name="Trashcan_Title" xml:space="preserve">
+		<value>Trashcan Title</value>
+	</data>
+	<data name="Trashcan_1" xml:space="preserve">
+		<value>Trashcan </value>
+	</data>
+	<data name="Cabinet_Title" xml:space="preserve">
+		<value>Cabinet Title</value>
+	</data>
+	<data name="Cabinet_1" xml:space="preserve">
+		<value>Cabinet</value>
 	</data>
 </root>
